Добавлена поддержка кэширования для тегов
- Обновлён конфиг для Feign клиента с добавлением кастомного ErrorDecoder
- Добавлены исключения для обработки ошибок TagAnalyticsClient
- Изменены пакеты для классов кэширования и сервисов
- Обновлены методы кэширования тегов для использования нового подхода
- Добавлены новые классы исключений для обработки ошибок
