# src/main/java/ru/practicum/eventhub/api/dto/response/TagStatsDto.java
@@ -3,7 +3,6 @@ package ru.practicum.eventhub.api.dto.response;
 import java.time.OffsetDateTime;
 
 public record TagStatsDto(
-        long usageCount,
-        OffsetDateTime lastUsedAt
+        OffsetDateTime createdAt
 ) {
 }
